# alethea

./: .gitignore  Dockerfile  LICENSE  README.md  base_readme.md  dashboard.py  docker-compose.yaml  docker-readme.md  main.py  main_old.py  pyproject.toml  setup.py  token_usage.json
app/: Dockerfile
assets/: ontology_dark_fantasy_forest.json
assets/lore/: Carroll Lewis. Alices adventures in Wonderland - royallib.ru.txt
llama/: Dockerfile  entrypoint.sh
src/: config.py  custom_program.py
src/database/: graph_db.py  neo4j_client.py
src/database/repositories/: chronicle_repo.py  (+2 more)
src/debug/: debugger_upd.py  telemetry.py
src/infrastructure/: async_llama_adapter.py  async_smart_client.py  llama_adapter.py  smart_client.py
src/ingestion/: classifier.py  game_math.py  graph_builder.py  graph_schemas.py  mappers.py  pipeline.py  resolver.py  scene_splitter.py  schemas.py  semantic_mapper.py  semantic_projector.py  synthesizer.py
src/models/: arcs_todos.py  new_schemas.py  templates_arcs.py  templates_atoms.py  templates_events.py  templates_roles.py  templates_topology.py  templates_verbs.py
src/pipeline/: context.py  engine.py  graph_builder.py  readme.md
src/registries/: all_registries.py  base.py
src/services/: flow_resolver.py  knowledge_service.py  validator.py
tests/integration/: brownian.py  data_test.py
todos/: варианты_разделения.txt  идеи_механики.txt  литература_для_движка.txt  наброски_подмены_вайбов.txt  набросы_механики.txt  пайплайн_отбеливания.txt  подробнее_про_взаимодействия.txt  пэйсинг.txt
tools/: data_generator.py
(+18 files in other folders)
